[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/hib_punch.gd" type="Script" id=4]
[ext_resource path="res://Player/light.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.14619
height = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.50105
height = 2.10405

[sub_resource type="Animation" id=3]
length = 0.9
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("s_Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("s_Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "punch_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("s_Player/hb_punch/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("s_Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=6]
length = 1.2
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("s_Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "dying"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "punch"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "standing"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachine" id=15]
states/dying/node = SubResource( 7 )
states/dying/position = Vector2( 1211.52, 162 )
states/punch/node = SubResource( 8 )
states/punch/position = Vector2( 1048.52, 162 )
states/run/node = SubResource( 9 )
states/run/position = Vector2( 889.518, 162 )
states/standing/node = SubResource( 10 )
states/standing/position = Vector2( 1037.52, 65 )
transitions = [ "standing", "run", SubResource( 11 ), "run", "standing", SubResource( 12 ), "standing", "punch", SubResource( 13 ), "punch", "standing", SubResource( 14 ) ]
start_node = "standing"
graph_offset = Vector2( 668.673, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="l2d_Player" type="Light2D" parent="."]
position = Vector2( -0.333694, -1.00114 )
scale = Vector2( 0.498132, 0.498132 )
texture = ExtResource( 5 )
texture_scale = 0.6
energy = 0.4
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 10.0

[node name="l2d_Player2" type="Light2D" parent="."]
position = Vector2( -0.165611, -0.168133 )
scale = Vector2( 0.378842, 0.376245 )
texture = ExtResource( 5 )
energy = 0.4
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 10.0

[node name="s_Player" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 6
vframes = 5
region_rect = Rect2( 80, 80, 8, 80 )

[node name="hb_punch" parent="s_Player" instance=ExtResource( 3 )]
position = Vector2( 10, 18 )
collision_mask = 8
script = ExtResource( 4 )
damage = 2

[node name="CollisionShape2D" parent="s_Player/hb_punch" index="0"]
position = Vector2( 1, -4.22703 )
shape = SubResource( 1 )
disabled = true

[node name="ch_Player" type="CollisionShape2D" parent="."]
position = Vector2( 0.007431, -0.748951 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="ap_Player" type="AnimationPlayer" parent="."]
autoplay = "standing"
anims/dying = SubResource( 3 )
anims/punch = SubResource( 4 )
anims/run = SubResource( 5 )
anims/standing = SubResource( 6 )

[node name="at_Player" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../ap_Player")
active = true
parameters/playback = SubResource( 16 )

[node name="pivot" type="Position2D" parent="."]
position = Vector2( 0, -4.375 )

[editable path="s_Player/hb_punch"]
